<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/app_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_preservation"
        android:icon="@drawable/ic_clock"
        android:title="@string/app_preserve"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_restaurant"
        android:icon="@drawable/ic_heart"
        android:title="@string/app_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/footer_spacer_1"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="" />
    <item
        android:id="@+id/footer_spacer_2"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="" />
</menu>