<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/hamburger_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrows_hamburger"
                />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hamburger_icon"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/welcome_text" />

                <LinearLayout
                    android:id="@+id/search_container"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_below="@id/welcome"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ingredient_search_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/search_button"
                        android:autofillHints=""
                        android:background="@drawable/search_input_background"
                        android:drawableLeft="@drawable/ic_search"
                        android:drawablePadding="10dp"
                        android:layout_margin="10dp"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        android:hint="@string/enter_ingredients"
                        android:inputType="text"
                        android:padding="8dp"
                        android:minHeight="48dp" />

                </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_container"
                android:layout_weight="1"
                android:padding="10dp" />


        </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>